[package]
name = "saten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.13.1", features = ["image"]}
log = "0.4"
thiserror = "1.0"
image = "0.24.7"
flate2 = "1.0"
encoding_rs = "0.8.33"

[features]
default = []
